--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "license": "ISC",
     "dependencies": {
       "express": "^4.16.3",
-      "socket.io": "^2.1.1"
+      "socket.io": "^2.1.1",
+      "mongodb": "^3.3.3",
+      "hashmap": "^2.4.0"
     }
   }
